# imap-mcp

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  cliff.toml  docker-compose.dev.yml  docker-compose.yml  release-please-config.json  renovate.json
.github/workflows/: ci.yml  claude-code-review.yml  commitlint.yml  docker-build-push.yml  docker-cleanup.yml  release.yml
docs/: release-automation-proposal.md
openspec/changes/add-create-folder-tool/: design.md  proposal.md  tasks.md
openspec/changes/add-create-folder-tool/specs/create-folder-mcp-tool/: spec.md
openspec/changes/archive/001-limit-attachment-size/: spec.md
openspec/changes/archive/001-limit-attachment-size/contracts/: get-attachment-response.md
openspec/changes/archive/002-multi-account-support/: plan.md
specs/001-limit-attachment-size/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
specs/001-limit-attachment-size/checklists/: requirements.md
specs/002-multi-account-support/: plan.md
src/: auth.rs  error.rs  extract.rs  imap.rs  lib.rs  main.rs  manage.rs  mcp.rs  providers.rs  sanitize.rs  session.rs
tests/: integration.rs
tests/fixtures/: 293_Ausschreibungen_27_Apr_2026.doc
