[package]
name = "imap-mcp"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
# Web framework
axum = { version = "0.8.4", features = ["macros"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tower = { version = "0.5.2" }
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = { version = "0.7.15" }

# MCP
rmcp = { version = "1.2.0", features = [
    "server",
    "transport-streamable-http-server",
] }

# OIDC
openidconnect = { version = "3.5.0" }

# IMAP
async-imap = { version = "0.11.0", default-features = false, features = ["runtime-tokio"] }
async-native-tls = { version = "0.6.0", default-features = false, features = ["runtime-tokio"] }

# Session storage
redis = { version = "1.0.0", features = ["tokio-comp", "aio"] }

# Encryption
aes-gcm = { version = "0.10.3" }
base64 = { version = "0.22.1" }

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
schemars = { version = "0.8.22" }

# Error handling
thiserror = { version = "2.0.12" }
anyhow = { version = "1.0.98" }

# Logging
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Crypto
sha2 = { version = "0.10.8" }

# Secret management
secrecy = { version = "0.10.3", features = ["serde"] }

# Text extraction
pdf-extract = { version = "0.10" }
calamine = { version = "0.34" }
zip = { version = "2" }
quick-xml = { version = "0.39" }

# Misc
uuid = { version = "1.16.0", features = ["v4"] }
chrono = { version = "0.4.40", features = ["serde"] }
http = { version = "1.3.1" }
futures = { version = "0.3.31" }
url = { version = "2.5.4" }
html2text = { version = "0.12.6" }
mailparse = { version = "0.16.0" }
mail-builder = { version = "0.4" }
imap-proto = { version = "0.16.4" }

[dev-dependencies]
http-body-util = { version = "0.1.3" }
